--- a/src/sass/home/_dta-gov-au.home.highlight.scss
+++ b/src/sass/home/_dta-gov-au.home.highlight.scss
@@ -8,7 +8,7 @@
   background-size: cover;
   @include AU-space( margin-top, -1.5unit );
   position: relative;
-  z-index: -2;
+  z-index: 1;
   .container {
     display: display;
     @include AU-media( sm ) {
